--- a/fmltutor/src/main/resources/assets/fmltutor/lang/en_us.json
+++ b/fmltutor/src/main/resources/assets/fmltutor/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.fmltutor.fmltutor_item": "FurBaby",
+  "item.fmltutor.fmltutor_food": "Parish",
+
   "itemGroup.fmltutor_group":"FMLTUTOR CAT"
 }
